--- a/Objects.tex
+++ b/Objects.tex
@@ -189,7 +189,7 @@ In order to identify decays of boosted hadronic top quarks, as discussed above, 
     \includegraphics[width=0.49\textwidth]{figures/Draw2HistogramsFrom1File_QQ_MASS_CUT_PT_TT_MASS_CUT_PT_JetPt500.pdf} & 
     \includegraphics[width=0.49\textwidth]{figures/Draw2HistogramsFrom1File_QQ_MINM_CUT_PT_MASS_NSUB_TT_MINM_CUT_PT_MASS_NSUB_JetPt500.pdf}
   \end{tabular}
-  \caption{Jet mass (\textit{left}) and minimum pairwise subjet mass (\textit{right}) for CA8 jets with $\pt > 500$\gev from a simulated $t\bar{t}$ POWHEG sample (red) and from a simulated QCD PYTHIA sample (black). Taken from~\cite{CMS:2014fya}.}
+  \caption{Jet mass (\textit{left}) and minimum pairwise subjet mass (\textit{right}) for CA8 jets with $\pt > 500$\gev from a simulated $t\bar{t}$ \powheg sample (red) and from a simulated QCD \pythia sample (black). Taken from~\cite{CMS:2014fya}.}
   \label{fig:boosted_top_cms_variables}
 \end{figure}
  \item \textbf{CMS Top Tagger:} The CMS Top Tagger~\cite{CMS-PAS-JME-09-001} is based on the Top Tagger developed by Kaplan et al.~\cite{Kaplan:2008ie} and acts on jets clustered by the Cambrigde-Aachen algorithm with distance parameter $R = 0.8$. These jets, used as input for the algorithm, are denoted as \textit{hard jets}. Since the decay products of the hadronic top are not expected to be all contained within one jet with $R = 0.8$ for low transverse momenta of the top quark, only jets with $\pt^\mathrm{jet} > 350$\gev are considered. In order to identify subjets within the hard jets, a two-stage decomposition procedure is applied which performs the pairwise clustering sequence used to form the hard jet in reverse order. First, the algorithm aims at splitting the hard jet into two subclusters (\textit{primary decomposition}). Second, it is attempted to further split the clusters emerging from the first step (\textit{secondary decomposition}). Typically, subjets are found when they are spatially well separated and carry a significant fraction of the momentum of the hard jet. Details on the actual splitting criteria can be found in~\cite{CMS:2014fya}. With this approach, up to four subjets are identified within the hard jet. After a successful decomposition procedure, kinematic criteria can be applied to the identified subjets in order to tag top jets. In the CMS top-tagging algorithm, as employed in this thesis, the following criteria are used:
@@ -239,7 +239,7 @@ The performance of various taggers is compared by determining the top-tag effici
   \caption{Mistag rate versus top-tagging efficiency as measured from QCD \pythia6 and POWHEG \ttbar simulated events, respectively. In the cases where a jet mass cut is applied, the cut is not varied but fixed at $140 < m_\mathrm{jet} < 250$\gev. N-subjettiness is calculated using $R = 0.8$ jets except when used in combination with the HEP Top Tagger in which case $R = 1.5$ jets are used. Signal jets are matched to simulated all-hadronic generated top quarks, while background jets are matched to simulated partons from the hard scatter. Distributions are shown for three \pt selections, where the \pt cut is applied to the matched generated parton~\cite{CMS:2014fya}.}
   \label{fig:boosted_top_roc}
 \end{figure}
-The top-tag efficiency determined from simulated $t\bar{t}$ events for the selection criteria described above amounts to 35.3\% for a matched parton-\pt of $> 200$\gev for the HEP Top Tagger (HEP WP0) and 38.3\% for a matched parton-\pt of $> 400$\gev for the CMS Top Tagger (CMS WP0) while the mistag rates as determined from simulated QCD multijet events are 2.6\% and 2.5\%, respectively. However, the tagging performance shows a moderate dependence on pile-up such that in high pile-up environments a performance degradation is expected. For instance, in the case of the CMS Top Tagger the efficiency stays rather stable as a function of the number of primary vertices with a slope of $0.031\% \pm 0.034\%$. However, the mistag rate increases with a slope of $0.095\% \pm 0.006\%$ as a function of the number of primary vertices.      
+The top-tag efficiency determined from simulated $t\bar{t}$ events for the selection criteria described above amounts to 35.3\% for a matched parton-\pt of $> 200$\gev for the HEP Top Tagger (HEP WP0) and 38.3\% for a matched parton-\pt of $> 400$\gev for the CMS Top Tagger (CMS WP0) while the mistag rates as determined from simulated QCD multijet events are 2.6\% and 2.5\%, respectively. However, the tagging performance shows a moderate dependence on pile-up such that in high pile-up environments a performance degradation is expected. For instance, in the case of the CMS Top Tagger the efficiency stays rather stable as a function of the number of primary vertices with a slope of $0.031\% \pm 0.034\%$ while the mistag rate increases with a slope of $0.095\% \pm 0.006\%$ as a function of the number of primary vertices.      
 
 %\subsection{Subjet B-Tagging}
 %\label{sec:boosted_tops_subjet_b}
