--- a/Resolution.tex
+++ b/Resolution.tex
@@ -88,7 +88,7 @@ A further source of momentum differences between the particle-level and the dete
 \end{table}  
 In this analysis, multijet events from pp collisions are considered which have been recorded in 2012 with the CMS detector at $\sqrt{s}=8$\tev. From these data only those are considered where all subdetectors have been reliably operating. The collected data sample used in this analysis corresponds to an integrated luminosity of $19.7$~\fbinv with an uncertainty of $2.5\%$ (syst.) + $0.5\%$ (stat.)~\cite{CMS-PAS-LUM-13-001}. \\
 Multijet events are pre-selected by a set of triggers based on the average transverse momentum of the two leading jets in the event. In order to obtain a good coverage of the \ptave spectrum, different trigger paths are combined. Since they have different minimum $\pt^{ave}$ thresholds, a broad range in \ptave is considered. In Tab.~\ref{tab:trigger} the different trigger paths used for this analysis are listed and the particular offline $\pt^{ave}$ value for which the respective trigger reaches $99\%$ of the efficiency plateau is given (taken from~\cite{website:HamburgCalib}). \\
-The simulated event sample is generated with \pythia, as discussed in Section~\ref{sec:jer_response} \todo{details trigger selection + eff}.  
+The simulated event sample is generated with \pythia, as discussed in Section~\ref{sec:jer_response}.   
 
 \subsection{Selection Criteria}
 \label{subsec:jer_sel_cuts}
