--- a/Theory.tex
+++ b/Theory.tex
@@ -32,7 +32,7 @@ In addition to the attributes described above, fermions are furthermore characte
 Matter particles interact with each other through fundamental forces mediated via gauge bosons. These bosons arise from the principle of local gauge invariance under symmetry transformations. 
  \begin{description}
   \item \textit{Electromagnetic Force:} The description of the electromagnetic force is based on the theory of \textit{Quantum Electrodynamics} (QED). It is exchanged between electrically charged particles, like the charged leptons and quarks, by the exchange of photons. These are massless and electrically neutral resulting in the property that the electromagnetic force is long ranged.
-  \item \textit{Weak Force:} The weak force acts on the weak charge which is carried by all fermions in the SM. It is mediated by three vector bosons -- namely the two charged \Wpm bosons and the neutral \Z boson. These bosons are unlike the photon massive with masses\footnote{In this thesis, natural units are used with $\hbar = c =1$. Thus, also particle masses and momenta have the dimension of energies.} of $\Wpm = 80.385 \pm 0.015$\gev and $\Z = 91.1876 \pm 0.0021$\gev~\cite{bib:PDG:2012}. As a result, the weak interaction is suppressed with respect to the electromagnetic force. \\
+  \item \textit{Weak Force:} The weak force acts on the weak charge which is carried by all fermions in the SM. It is mediated by three vector bosons -- namely the two charged \Wpm bosons and the neutral \Z boson. These bosons are unlike the photon massive with masses\footnote{In this thesis, natural units are used, \ie $\hbar = c =1$. Thus, also particle masses and momenta have the dimension of energies.} of $\Wpm = 80.385 \pm 0.015$\gev and $\Z = 91.1876 \pm 0.0021$\gev~\cite{bib:PDG:2012}. As a result, the weak interaction is suppressed with respect to the electromagnetic force. \\
 Weak interactions preferably take place within one generation, \eg \lel or \lmu transform into the respective neutrinos when emitting a \Wm. However, since the mass eigenstates in the weak interaction differ from the flavour eigenstates, \Wpm bosons can also couple to fermions between different generations. In the quark-sector typically a representation is chosen where the up-type flavour eigenstates correspond to the mass eigenstates and the down-type quarks mix. This mixing is described by the CKM-matrix ~\cite{PhysRevLett.10.531, PTP.49.652}. This is a unitary matrix, described by three mixing angles and one CP-violating phase, which indicates the relative strength between individual transitions. Similarly, also in the neutrino sector a mixing between the weak and the mass eigenstates occurs which is known as \textit{neutrino oscillation}~\cite{Maki:1962mu, Pontecorvo:1967fh, Fukuda:1998mi}.
   \item \textit{Strong Force:} The theoretical framework describing the strong force is called Quantum Chromodynamics (QCD). It is mediated via eight massless gluons and acts on the colour charge which is carried for instance by quarks. In contrast to the photon, which is electrically neutral and thus can not interact with itself, gluons carry a colour charge and hence couple to themselves. The colour charge exists in three different states commonly denoted as 'red', 'green' and 'blue'. \\
 Regarding the dependence on the distance, the strong force behaves differently than other fundamental forces: the coupling strength increases with rising distance. This is a consequence of the different colour states and the self-coupling property of gluons. It is referred to as \textit{confinement}~\cite{Alkofer:2006fu} and describes the fact that coloured objects can not exist freely. Actually, when separated, coloured objects start to build new coloured particles until only a colour neutral formation is left. Such colourless objects linked by the strong force are named \textit{hadrons}. On the other hand, particles taking part in the strong interaction start to behave quasi-free, \ie the coupling strength is small, when the distance decreases. This feature is known as \textit{asymptotic freedom}~\cite{PhysRevLett.30.1346, PhysRevLett.30.1343}. \\
