--- a/Thesis.tex
+++ b/Thesis.tex
@@ -2,8 +2,7 @@
 % Main tex file
 
 \documentclass[
-twoside=true,
-BCOR10mm,
+twoside,
 headsepline,     % Line under page header
 headings=normal,
 open=right,
@@ -13,8 +12,10 @@ a4paper
 \addtolength{\topmargin}{-0.2cm}
 \setlength{\textwidth}{15cm}
 \setlength{\textheight}{22.4cm}
-\setlength{\oddsidemargin}{0cm}
-\setlength{\evensidemargin}{0.85cm} 
+%\setlength{\oddsidemargin}{0cm}
+%\setlength{\evensidemargin}{0.85cm} 
+\setlength{\oddsidemargin}{0.85cm}
+\setlength{\evensidemargin}{0cm} 
 
 \usepackage[automark,headsepline]{scrpage2}
 \pagestyle{scrheadings}
@@ -25,7 +26,7 @@ a4paper
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{3}
 
-\usepackage{todonotes}
+%\usepackage{todonotes}  
 
 % Alter some LaTeX defaults for better treatment of figures,
 % from http://mintaka.sdsu.edu/GF/bibliog/latex/floats.html
@@ -62,13 +63,13 @@ a4paper
 \usepackage{afterpage}
 \usepackage{verbatim}
 \usepackage{textcomp}
-\usepackage{german}
+\usepackage{pdfpages}
 \usepackage[latin1]{inputenc}
 
 %\usepackage{setspace}
 %\doublespacing
 
-\parindent0pt 
+%\parindent0pt 
 
 \hyphenation{Super-sym-me-try}
 \hyphenation{maximum-like-li-hood}
