--- a/definitions.tex
+++ b/definitions.tex
@@ -245,6 +245,7 @@
 \newcommand{\geant}{\textsc{Geant4}\xspace}
 \newcommand{\lvmini}{\textsc{LVMINI}\xspace}
 \newcommand{\minuit}{\textsc{MINUIT}\xspace}
+\newcommand{\powheg}{\textsc{Powheg}\xspace}
 
 % Experiments, facilities, and collaborations
 \newcommand{\cern}{CERN\xspace}
